<resources>
  <string name="app_name">Bevo Maps</string>
  <string name="button_back">Back</string>
  <string name="button_menu">Menu</string>
  <string name="button_search">Search</string>
  <string name="button_speech">Speech</string>
  <string name="header_options">Options</string>
  <string name="item_about">About</string>
  <string name="item_satellite">Satellite</string>
  <string name="search_hint">Search</string>
  <string name="toast_invalid">NOT FOUND</string>
  <string name="options">Options</string>
  <string name="satellite">Satellite</string>
</resources>
